--- a/style/style.css
+++ b/style/style.css
@@ -1,118 +1,130 @@
 * {
-  padding: 0px;
-  margin: 0px;
-  box-sizing: border-box;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
 }
 
 body {
-  width: 100%;
-  height: 100vh;
-  font-family: "Poppins", serif;
-  background-color: hsl(0, 0%, 98%);
-  display: flex;
-  justify-content: center;
+    width: 100%;
+    height: 100vh;
+    font-family: "Poppins", serif;
+    background-color: hsl(0, 0%, 98%);
+    display: flex;
+    justify-content: center;
 }
 
 main {
-  width: min(1100px, 95%);
-  height: min(700px, 100%);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    width: min(1100px, 95%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 header {
-  width: 500px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  margin: 50px auto 30px auto;
+    max-width: 500px;
+    margin: 50px auto;
 }
 header h1 {
-  text-align: center;
-  font-weight: 200;
-  color: hsl(234, 12%, 34%);
-  line-height: 40px;
+    text-align: center;
+    font-weight: 200;
+    color: hsl(234, 12%, 34%);
+    line-height: 40px;
 }
 header h1 span {
-  font-weight: 500;
-  color: black;
-  word-spacing: 3px;
+    font-weight: 500;
+    color: black;
+    word-spacing: 3px;
 }
 header p {
-  text-align: center;
-  font-size: 14px;
-  color: hsl(229, 6%, 66%);
+    text-align: center;
+    font-size: 14px;
+    color: hsl(229, 6%, 66%);
+    margin-top: 10px;
 }
 
 .container {
-  display: grid;
-  grid-template-rows: repeat(auto, 20px);
-  grid-template-columns: repeat(40, minmax(20px, 1fr));
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
 }
+
 .container .card {
-  background-color: white;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  border-radius: 5px;
-  padding: 20px;
+    max-width: 330px;
+    height: 217px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 5px;
+    padding: 20px;
 }
 .container .card h1 {
-  font-size: 20px;
-  font-weight: 500;
+    font-size: 20px;
+    font-weight: 500;
 }
 .container .card p {
-  color: hsl(229, 6%, 66%);
-  font-size: 13px;
-  margin-top: 10px;
+    color: hsl(229, 6%, 66%);
+    font-size: 13px;
+    margin-top: 10px;
 }
 .container .card img {
-  margin-top: 30px;
-  float: right;
+    margin-top: 30px;
+    float: right;
 }
 
 .supervisor {
-  border-top: 3px solid hsl(180, 62%, 55%);
-  grid-column-start: 2;
-  grid-column-end: 14;
-  grid-row-start: 8;
-  grid-row-end: 19;
+    border-top: 3px solid hsl(180, 62%, 55%);
+    grid-row: 2/4;
+    margin-top: -110px;
 }
 
 .builder {
-  border-top: 3px solid hsl(0, 78%, 62%);
-  grid-column-start: 15;
-  grid-column-end: 27;
-  grid-row-start: 1;
-  grid-row-end: 12;
+    border-top: 3px solid hsl(0, 78%, 62%);
+    grid-column: 2/3;
 }
 
 .karma {
-  border-top: 3px solid hsl(34, 97%, 64%);
-  grid-column-start: 15;
-  grid-column-end: 27;
-  grid-row-start: 13;
-  grid-row-end: 24;
+    border-top: 3px solid hsl(34, 97%, 64%);
+    grid-column: 2/3;
+    grid-row: 2/3;
 }
 
 .calculator {
-  border-top: 3px solid hsl(212, 86%, 64%);
-  grid-column-start: 28;
-  grid-column-end: 40;
-  grid-row-start: 8;
-  grid-row-end: 19;
+    border-top: 3px solid hsl(212, 86%, 64%);
+    grid-row: 2/4;
+    margin-top: -110px;
 }
 
-@media (max-width: 700px) {
-  .container .card h1 {
-    font-size: 13px;
-  }
-  .container .card p {
-    font-size: 10px;
-  }
-  .container .card img {
-    width: 40px;
-    margin-top: 30px;
-  }
+@media (max-width: 815px) {
+    body {
+        height: 1200px;
+    }
+    .supervisor {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        margin-top: 0;
+    }
+    .builder {
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    .karma {
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+    .calculator {
+        grid-column: 1/2;
+        grid-row: 4/5;
+        margin-top: 0;
+    }
+}
+@media (max-width: 375px) {
+    header {
+        max-width: 300px;
+        margin: 50px auto 30px auto;
+    }
+    header h1 {
+        font-size: 20px;
+        line-height: 25px;
+    }
 }
 
 /*# sourceMappingURL=style.css.map */
