--- a/style/style.scss
+++ b/style/style.scss
@@ -27,19 +27,14 @@ body {
 
 main {
     width: min(1100px, 95%);
-    height: min(700px, 100%);
-
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 header {
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin: 50px auto 30px auto;
+    max-width: 500px;
+    margin: 50px auto;
 
     h1 {
         text-align: center;
@@ -58,18 +53,21 @@ header {
         text-align: center;
         font-size: 14px;
         color: $C6_grayish-blue;
+        margin-top: 10px;
     }
 }
 
 .container {
     display: grid;
-    grid-template-rows: repeat(auto, 20px);
-    grid-template-columns: repeat(40, minmax(20px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
 
     .card {
+        max-width: 330px;
+        height: 217px;
         background-color: white;
 
-        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         border-radius: 5px;
         padding: 20px;
 
@@ -93,58 +91,63 @@ header {
 
 .supervisor {
     border-top: 3px solid $C2_cyan;
-
-    grid-column-start: 2;
-    grid-column-end: 14;
-
-    grid-row-start: 8;
-    grid-row-end: 19;
+    grid-row: 2 / 4;
+    margin-top: -110px;
 }
 
 .builder {
     border-top: 3px solid $C1_red;
-
-    grid-column-start: 15;
-    grid-column-end: 27;
-
-    grid-row-start: 1;
-    grid-row-end: 12;
+    grid-column: 2/3;
 }
 
 .karma {
     border-top: 3px solid $C3_orange;
 
-    grid-column-start: 15;
-    grid-column-end: 27;
-
-    grid-row-start: 13;
-    grid-row-end: 24;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
 }
 
 .calculator {
     border-top: 3px solid $C4_blue;
-    grid-column-start: 28;
-    grid-column-end: 40;
-
-    grid-row-start: 8;
-    grid-row-end: 19;
+    grid-row: 2 / 4;
+    margin-top: -110px;
 }
 
-@media (max-width: 700px) {
-    .container {
-        .card {
-            h1 {
-                font-size: 13px;
-            }
+@media (max-width: 815px) {
+    body {
+        height: 1200px;
+    }
+    .supervisor {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        margin-top: 0;
+    }
 
-            p {
-                font-size: 10px;
-            }
+    .builder {
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
 
-            img {
-                width: 40px;
-                margin-top: 30px;
-            }
+    .karma {
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+
+    .calculator {
+        grid-column: 1/2;
+        grid-row: 4/5;
+        margin-top: 0;
+    }
+}
+
+@media (max-width: 375px) {
+    header {
+        max-width: 300px;
+        margin: 50px auto 30px auto;
+
+        h1 {
+            font-size: 20px;
+            line-height: 25px;
         }
     }
 }
